--- a/styles.css
+++ b/styles.css
@@ -289,7 +289,7 @@ footer {
 .social-icons a {
             display: inline-flex;
             align-items: center;
-            
+            place-content:center;
             width: 40px;
             height: 40px;
             background-color: rgba(255, 255, 255, 0.1);
